# minimal_projects

./: .gitignore  CMakeLists.txt
src/: CMakeLists.txt  core.cpp  naive_converters.hpp  naive_udxs.hpp  pickle_support.hpp
test/: inner_is_pyobject.py  test_extraction.py  test_extraction_in_uda_evolve.py  test_ispyobject.py  test_pyobject.py
